--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="elevation_dimension">10dp</dimen>
+    <dimen name="ten_dimen">10dp</dimen>
+    <dimen name="twenty_dimen">20dp</dimen>
+    <dimen name="fifty_dimen">50dp</dimen>
+    <dimen name="thirty_dimen">30dp</dimen>
 </resources>
