--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,26 +63,32 @@
                 android:id="@+id/input_layout_user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:imeOptions="actionNext"
                 android:layout_marginTop="@dimen/ten_dimen">
 
                 <EditText
                     android:id="@+id/name_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/student_name" />
+                    android:hint="@string/student_name"
+                    android:maxLines="1"
+                   />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_father_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:imeOptions="actionNext"
                 android:layout_marginTop="@dimen/ten_dimen">
 
                 <EditText
                     android:id="@+id/father_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/dad_name" />
+                    android:hint="@string/dad_name"
+                    android:maxLines="1"
+                    android:imeOptions="actionNext"/>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -95,7 +101,9 @@
                     android:id="@+id/class_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/standard" />
+                    android:hint="@string/standard"
+                    android:maxLines="1"
+                    android:imeOptions="actionNext"/>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -109,7 +117,9 @@
                     android:id="@+id/roll_no_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/roll_no" />
+                    android:hint="@string/roll_no"
+                    android:maxLines="1"
+                    android:imeOptions="actionDone" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -122,7 +132,9 @@
                     android:id="@+id/teacher_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/teacher_name" />
+                    android:hint="@string/teacher_name"
+                    android:maxLines="1"
+                    android:imeOptions="actionNext"/>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -135,7 +147,9 @@
                     android:id="@+id/subject"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/subject" />
+                    android:hint="@string/subject"
+                    android:maxLines="1"
+                    android:imeOptions="actionNext"/>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -148,7 +162,9 @@
                     android:id="@+id/rating_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/rating" />
+                    android:hint="@string/rating"
+                    android:maxLines="1"
+                    android:imeOptions="actionNext"/>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -162,13 +178,16 @@
                     android:id="@+id/teacher_id_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/teacher_id" />
+                    android:hint="@string/teacher_id"
+                    android:maxLines="1"
+                    android:imeOptions="actionDone"/>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/submit_fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/ic_add_grey_600_18dp"
                 android:layout_gravity="center" />
         </LinearLayout>
 
@@ -180,6 +199,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
         app:layout_anchor="@id/appBar"
+        android:background="@drawable/ic_add_grey_600_18dp"
         app:layout_anchorGravity="bottom|right|end" />
 
     <TextView
